# TRELLIS.2-stableprojectorz

./: .dockerignore  .gitignore  Dockerfile  README.md  Trellis2StableProjectorz.pyproj  Trellis2StableProjectorz.sln  app.py  docker-compose.yml  example.py  install.py  mark_files.py  pipeline_worker.py  setup.py  temp_app.py
api_spz/: api-documentation.html  main_api.py
api_spz/core/: exceptions.py  files_manage.py  models_pydantic.py  state_manage.py
api_spz/routes/: generation.py  layout_generation_3d_panel.txt
docker/: entrypoint.sh
o-voxel/: pyproject.toml  setup.py
o-voxel/o_voxel/: postprocess.py
o-voxel/src/io/: filter_neighbor.cpp  filter_parent.cpp  svo.cpp
tools/: profiler_python_utils.py  profiling_wrapper.py
trellis2/models/sc_vaes/: sparse_unet_vae.py
trellis2/modules/: image_feature_extractor.py  utils.py
trellis2/modules/attention/: config.py
trellis2/modules/sparse/: config.py
trellis2/modules/sparse/attention/: full_attn.py
trellis2/modules/sparse/conv/: conv_flex_gemm.py
trellis2/pipelines/: trellis2_image_to_3d.py
trellis2/pipelines/rembg/: BiRefNet.py
trellis2/pipelines/samplers/: flow_euler.py
trellis2/renderers/: pbr_mesh_renderer.py
whl/: nvdiffrast-0.4.0-cp311-cp311-win_amd64.whl  nvdiffrec_render-0.0.0-cp311-cp311-win_amd64.whl  o_voxel-0.0.1-cp311-cp311-win_amd64.whl
